test/testdata/for/continue_inside_nested_function_error.lox
for (;;) {
    fun c() {
        continue; // error: 'continue' can only be used inside a loop
    }
    c();
    break;
}
